2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Remove log_gpasswd_success_gshadow(). Writing in
	gshadowis the last sub-task.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: No needto remove lines tarting with '#' from
	/etc/shells. This is already done by getusershell() and these
	shell would fail the access(X_OK) test.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/generate_mans.mak: Fix the generation of translated man
	pages. xml2po removed the comment from empty headers and the
	config was no more inserted.

2011-09-18  Nicolas François  <nicolas.francois@centraliens.net>

	* man/chage.1.xml: The LOGIN argument is not optional.
	* man/login.defs.d/QUOTAS_ENAB.xml: Document the dependency
	between /etc/limits and QUOTAS_ENAB.

2011-08-20  Nicolas François  <nicolas.francois@centraliens.net>

	* po/POTFILES.in: Added lib/spawn.c.

2011-08-20  Jonathan Nieder  <jrnieder@gmail.com>

	* lib/Makefile.am: Added lib/spawn.c and lib/spawn.h.
	* lib/nscd.c, lib/spawn.c, lib/spawn.h: It is not possible to
	differentiate between an nscd failure, and a failure to execute
	due to no nscd with posix_spawn. Use our own run_command routine.
	* src/userdel.c: Use run_command()

2011-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Ignore return value from snprintf.
	* src/groupmod.c: Add static qualifier to the cleanup structures.
	* src/groupmod.c: Check atexit failures.

2011-08-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Do not assign static to NULL.
	* src/usermod.c (date_to_str): buf needs to be unique (e.g.
	independent from negativ), and is an out buffer.
	* src/usermod.c: Ignore return value from snprintf, and force
	nul-termination of buffer.
	* src/usermod.c: Improve memory management.
	* src/usermod.c: An audit bloc was not reachable, moved above on
	success to move the home directory.